<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:weightSum="10"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/question_interval_title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/button"
            android:id="@+id/number_quiz" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/button"
            android:id="@+id/perfect_btn"
            android:background="@android:drawable/btn_default"
            android:layout_gravity="center"
            android:text="@string/perfect_title"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/button"
            android:id="@+id/major_btn"
            android:background="@android:drawable/btn_default"
            android:layout_gravity="center"
            android:text="@string/major_title"/>


    </LinearLayout>
    <ListView
        android:id="@+id/option_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />


</LinearLayout>
